Fix css for visualization 1 map.
Map now full dispalys without overlaping text at the top or being cutoff
at the bottom.

--- a/css/activity-map.css
+++ b/css/activity-map.css
@@ -43,9 +43,13 @@
 
 #container {
   width: 100%;
-  margin-top: -70px;
+  margin-top: -20px;
   padding: 0px;
-  position: relative;
+}
+
+#map-container{
+  display: block;
+  height: 600px;
 }
 
 #map {
